Fix flickering tools menu item animation.

The tools menu item animation that is triggered after the dismissal of
the Incognito In Product Help Bubble flickers at the end. This happens
because there is a gap between the end of the autoreversed animation
(where the item has a highlighted background) and the completion handler
(which sets the item to a white background). The fix is to use a
CABasicAnimation instead of |animateWithDuration|.

Bug: 767202
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I79d57ecf7e77281e9d6d112a66e8e7d20efcccef
Reviewed-on: https://chromium-review.googlesource.com/849176
Commit-Queue: edchin <edchin@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526861}
Former-commit-id: 81dc3d48490a10773cec0a0b64081608a7614f2a